# LSH

./: CMakeLists.txt  LICENSE  LSH.h  Make.sh  README.md  ThesisCh2Tests.cpp  UnitTests.cpp  main.cpp
hashBitOptimizers/: ARDHF.cpp  ARDHF.h  Boost.cpp  Boost.h  CMakeLists.txt  HashError.h  RDHF.cpp  RDHF.h  RandomConstructor.h  Randomconstructor.cpp
hashFunction/: CMakeLists.txt  DHHashFunction.cpp  DHHashFunction.h  DHHashTransformer.cpp  DHHashTransformer.h  DoubleHadamardFuncs.h  MeanTransformer.cpp  MeanTransformer.h  NullTransformer.cpp  NullTransformer.h  PCATransformer.cpp  PCATransformer.h  RandomProjectionHashFunction.cpp  RandomProjectionHashFunction.h  RandomRotationHashFunction.cpp  RandomRotationHashFunction.h  RandomSubSamplingHashFunction.cpp  RandomSubSamplingHashFunction.h  ShiftInvariantKernelHashFunction.cpp  ShiftInvariantKernelHashFunction.h  SparseSignConsistentHashFunction.cpp  SparseSignConsistentHashFunction.h  ThresholdTransformer.cpp  ThresholdTransformer.h
hashIndex/: CMakeLists.txt  HashCollection.cpp  HashCollection.h  HashIndexKgraph.cpp  HashIndexKgraph.h  HashIndexSupport.h  LSHForestHashIndex.cpp  LSHForestHashIndex.h  LSHForestHashIndexAsync.cpp  LSHForestHashIndexAsync.h  LSHForestSupport.h  ResizeableHashIndex.cpp  ResizeableHashIndex.h  StdHashIndex.cpp  StdHashIndex.h
support/: fig2_5.py  getdatasets.sh  reformatdatasets.py
testing/: CMakeLists.txt  TestLSH.cpp  TestLSH.h
